test/semantics/programs/valid/array-access.guav
# Should analyze successfully since a has type array and x has type integer

a = ["zero", "one", "two", "three"]
print(a[2])
